# nebula

./: Cargo.toml  README.md  tailwind.config.js
crates/astral-ui/: Cargo.toml  README.md
crates/astral-ui/src/components/: mod.rs  switch.rs
docs/: acknowledgements.md
launcher/: Cargo.toml  Dioxus.toml
launcher/src/: main.rs
launcher/src/gui/: app.rs  mod.rs
launcher/src/gui/assets/: app.scss
launcher/src/gui/components/: layout.rs  navbar.rs
launcher/src/gui/components/assets/: navbar.scss
